<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tagsRecyclerViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_tags_gradient"
        android:padding="8dp">

        <TextView
            android:id="@+id/tag"
            android:layout_width="190sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="#default"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@id/tag"
            android:layout_toEndOf="@id/tag"
            android:layout_toRightOf="@id/tag"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:text="Gender:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tag_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@id/tag"
            android:layout_toRightOf="@id/gender"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:text="Female"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag"
            android:layout_weight="1"
            android:text="Age:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tag_age"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag"
            android:layout_toRightOf="@id/age"
            android:layout_weight="1"
            android:text="18-99"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag"
            android:layout_toRightOf="@id/tag_age"
            android:layout_weight="1"
            android:text="Distance:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tag_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag"
            android:layout_toRightOf="@id/distance"
            android:layout_weight="1"
            android:text="100km"
            android:textSize="15sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center|right"
        android:gravity="center">

        <ImageView
            android:id="@+id/tag_delete"
            android:layout_width="34sp"
            android:layout_height="34sp"
            android:layout_marginRight="5sp"
            android:src="@drawable/ic_close_black_24dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>