<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--    mainfragment tags-->
    <string name="loadingUsers"></string>
    <string name="emptyTags">No users found :(\nClick here to add tags</string>
    <string name="noMoreUsers">No users found :(\nClick here to add tags </string>

</resources>